<resources>
    <string name="app_name">kecoaxx</string>
    <string name="simpan_profil">➜] Simpan</string>
    <string name="start_bot">Start Bot</string>
    <string name="domisili_kota">Domisili/kota</string>
    <string name="target">Target</string>
    <string name="nama">Nama</string>
    <string name="pekerjaan">Pekerjaan</string>
    <string name="hobi">Hobi</string>
    <string name="blacklist">Blacklist</string>
    <string-array name="persona_labels">
        <item>Manja</item>
        <item>Tante Genit</item>
        <item>Misterius</item>
        <item>Sok Dingin</item>
        <item>Pinter Kalem</item>
        <item>Flirty Toxic</item>
        <item>Sopan</item>
    </string-array>

    <string name="log_ngontol_v10">== LOG ==</string>
    <string name="login">Login</string>
    <string name="kecoaxx_bot_v_15">KECOAXX BOT v.147</string>
    <string name="update">ⓘ UPDATE</string>
    <string name="konfigurasi">✚ CONFIG</string>
    <string name="aplikasi">Aplikasi</string>
    <string name="opsi_relog">Opsi Relog:</string>
    <string name="belum_dibaca">Belum Dibaca</string>
    <string name="no_relog">No relog</string>
    <string name="hybrid_relog">relog hybrid</string>

    <string name="overlay">Overlay</string>
    <string name="semua">Semua</string>
    <string name="off">OFF</string>
    <string name="hapus_data">Hapus data</string>
    <string name="opsi_pengembang">⚒ Opsi Devlpr</string>
    <string name="on">- On</string>
    <string name="hioff">- Off</string>
    <string name="auto_hi">Auto hi___</string>
    <string name="reset_api">Reset API</string>
</resources>